<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InsertMeasurement"
    android:id="@+id/insertmeasurement">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/lavender_border"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="Add Record"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/dateId"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/lavender_border"
                android:gravity="start|center_vertical"
                android:hint="Date"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/timeId"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/lavender_border"
                android:gravity="start|center_vertical"
                android:hint="Time"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/systolicPressureId"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/lavender_border"
                android:gravity="start|center_vertical"
                android:hint="Systolic Pressure"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/diastolicPressureId"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/lavender_border"
                android:gravity="start|center_vertical"
                android:hint="Diastolic Pressure"
                android:padding="10dp"
                android:textColor="@color/lavender"
                android:textSize="20dp"
                />


            <EditText
                android:id="@+id/heartRateId"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/lavender_border"
                android:gravity="start|center_vertical"
                android:hint="Heart Rate(In BPM)"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/commentId"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/lavender_border"
                android:gravity="start|center_vertical"
                android:hint="Comment"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <Button
                android:id="@+id/insertButtonId"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:text="INSERT"
                android:textColor="@color/lavender"
                android:textSize="20dp"

                app:rippleColor="#f2e6e6" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</ScrollView>