...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpdateMeasurement"
    android:id="@+id/updatemeasurement">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
...
                android:hint="Comment"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <Button
                android:id="@+id/updateButtonId"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:text="UPDATE"
                android:textColor="@color/lavender"
                android:textSize="20dp"
...
