<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignIn"
    android:id="@+id/signinactivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/lavender_border"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="LOGIN"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />


            <EditText
                android:id="@+id/emailLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/lavender_border"
                android:gravity="start|center_vertical"
                android:hint="Email"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20dp" />


            <EditText
                android:id="@+id/passwordLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/lavender_border"
                android:gravity="start|center_vertical"
                android:hint="Password"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:inputType="textPassword"
                />

            <Button
                android:id="@+id/signinButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:text="LogIn"
                android:textColor="@color/lavender"
                android:textSize="20dp"
                app:rippleColor="#f2e6e6" />

            <TextView
                android:id="@+id/signupLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:text="Are you not registered? Sign Up"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center"
                android:id="@+id/progressbarIdLogin"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</ScrollView>